# SDL_Random

./: .gitignore
CircleSDL/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake  rules.ninja
CircleSDL/src/: circle.c  main.c  vector.c  vector.h
CollisionEngine/: .ninja_deps  .ninja_log  CMakeLists.txt  cmake_install.cmake  read.py  values.txt
CollisionEngine/src/: main.c  player.c  player.h  wall.c  wall.h
GameOfLife/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  rules.ninja
GameOfLife/src/: cell.c  cell.h  dynarray.c  dynarray.h  main.c  main.h  todo
RayCast/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake  rules.ninja
RayCast/src/: circle.h  dynarray.c  dynarray.h  line.c  line.h  main.c  main.h  raycast.c  raycast.h
SDL/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  rules.ninja
SDL/src/: main.c  math.c  math.h  player.c  player.h
